--- a/frontend/Login/login.html
+++ b/frontend/Login/login.html
@@ -111,15 +111,15 @@
 <body>
 
   <div class="container">
-    <h2>Welcome Back 👋</h2>
+    <h2>Login</h2>
 
     <form id="loginForm">
-      <input type="email" id="email" placeholder="Email" required>
+      <!-- <input type="email" id="email" placeholder="Email" required>
       <input type="password" id="password" placeholder="Password" required>
 
       <div class="spinner" id="loadingSpinner"></div>
 
-      <button type="submit" id="loginBtn">Login</button>
+      <button type="submit" id="loginBtn">Login</button> -->
       <button type="button" id="googleLogin">Login with Google</button>
 
       <p id="error">Invalid credentials</p>
